Efficiency improve and fix bug